Добавлена ручка с получением рекомендаций фрилансера
