# internal/app/api/freelancers/v1/get_recommendations.go
@@ -1,0 +1,28 @@
+package v1
+
+import (
+	"context"
+	"github.com/samber/lo"
+	"medblogers_base/internal/modules/freelancers/action/get_recommendations/dto"
+	desc "medblogers_base/internal/pb/medblogers_base/api/freelancers/v1"
+)
+
+func (i *Implementation) GetFreelancerRecommendations(ctx context.Context, req *desc.GetFreelancerRecommendationsRequest) (*desc.GetFreelancerRecommendationsResponse, error) {
+	resp, err := i.freelancers.Actions.GetRecommendations.Do(ctx, req.GetFreelancerId())
+	if err != nil {
+		return nil, err
+	}
+
+	return &desc.GetFreelancerRecommendationsResponse{
+		Doctors: lo.Map(resp.Doctors, func(item dto.Doctor, _ int) *desc.GetFreelancerRecommendationsResponse_Doctor {
+			return &desc.GetFreelancerRecommendationsResponse_Doctor{
+				Id:         item.ID,
+				Name:       item.Name,
+				Slug:       item.Slug,
+				Speciality: item.Speciality,
+				City:       item.City,
+				Image:      item.Image,
+			}
+		}),
+	}, nil
+}
