# internal/pb/medblogers_base/medblogers_api.swagger.json
@@ -243,6 +243,38 @@
         ]
       }
     },
+    "/api/v1/freelancers/card/{freelancerId}/recommendations": {
+      "get": {
+        "summary": "Получение рекомендаций фрилансера",
+        "operationId": "FreelancerService_GetFreelancerRecommendations",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1GetFreelancerRecommendationsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "freelancerId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "int64"
+          }
+        ],
+        "tags": [
+          "FreelancerService"
+        ]
+      }
+    },
     "/api/v1/freelancers/card/{freelancerSlug}": {
       "get": {
         "summary": "Получение детальной информации про фрилансера",
@@ -983,6 +1015,30 @@
         "SUBSCRIBERS_ASC"
       ],
       "default": "SUBSCRIBERS_DESC"
+    },
+    "GetFreelancerRecommendationsResponseDoctor": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "slug": {
+          "type": "string"
+        },
+        "speciality": {
+          "type": "string"
+        },
+        "city": {
+          "type": "string"
+        },
+        "image": {
+          "type": "string"
+        }
+      }
     },
     "GetSettingsResponseFilterItem": {
       "type": "object",
@@ -1910,6 +1966,18 @@
         },
         "image": {
           "type": "string"
+        }
+      }
+    },
+    "v1GetFreelancerRecommendationsResponse": {
+      "type": "object",
+      "properties": {
+        "doctors": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/GetFreelancerRecommendationsResponseDoctor"
+          }
         }
       }
     },
